# DotsToCode

./: README.md  pyproject.toml
new_product_development/: 0322_list.xlsx  GeneticAlgorithm.py  main.ipynb  main.py  test.py
